--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,24 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      PDF DOWNLOAD
     </ion-title>
+    <ion-buttons end>
+    <button ion-button outline (click)="zoomIn()" >zoom in</button>
+    <button ion-button outline (click)="zoomOut()" >zoom out</button>
+    <button ion-button outline (click)="open()" >imprimir</button>
+  </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div>
+    <pdf-viewer [src]="pdfSrc" 
+    [render-text]="true"
+    [original-size]="false"
+    [autoresize]="true"
+    [zoom]=zoom
+    style="display: flex;">
+  </pdf-viewer>
+  </div>
 </ion-content>
